@@ -1,5 +1,8 @@
 package AlsongDalsong_backend.AlsongDalsong.config;
 
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import springfox.documentation.builders.ApiInfoBuilder;
@@ -14,16 +17,12 @@ import springfox.documentation.spi.service.contexts.SecurityContext;
 import springfox.documentation.spring.web.plugins.Docket;
 import springfox.documentation.swagger2.annotations.EnableSwagger2;
 
-import java.util.Arrays;
-import java.util.List;
-
 /**
  * API 문서 자동화를 위한 스웨거 설정
  */
 @Configuration
 @EnableSwagger2
 public class SwaggerConfig {
-
     private static final String API_NAME = "AlsongDalsong API";
     private static final String API_VERSION = "0.0.1";
     private static final String API_DESCRIPTION = "AlsongDalsong API 명세서";
@@ -32,15 +31,15 @@ public class SwaggerConfig {
     public Docket api() {
         return new Docket(DocumentationType.SWAGGER_2)
                 .select()
-                .apis(RequestHandlerSelectors.basePackage("AlsongDalsong_backend.AlsongDalsong"))  // Swagger를 적용할 클래스의 package명
-                .paths(PathSelectors.any())  // 해당 package 하위에 있는 모든 url에 적용
+                .apis(RequestHandlerSelectors.basePackage("AlsongDalsong_backend.AlsongDalsong"))
+                .paths(PathSelectors.any())
                 .build()
                 .apiInfo(apiInfo())
-                .securityContexts(Arrays.asList(securityContext()))
-                .securitySchemes(Arrays.asList(apiKey()));
+                .securityContexts(Collections.singletonList(securityContext()))
+                .securitySchemes(List.of(apiKey()));
     }
 
-    public ApiInfo apiInfo() {  // API의 이름, 현재 버전, API에 대한 정보
+    public ApiInfo apiInfo() {
         return new ApiInfoBuilder()
                 .title(API_NAME)
                 .version(API_VERSION)
@@ -48,7 +47,7 @@ public class SwaggerConfig {
                 .build();
     }
 
-    private ApiKey apiKey() { // jwt token 추가
+    private ApiKey apiKey() {
         return new ApiKey("JWT", "Authorization", "header");
     }
 
